GPencil: All strokes snap to origin in a Scale value is on 0 #101517

Closed
opened 2022-10-01 10:56:04 +02:00 by Julien Kaspar · 5 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-29 23:32, hash: 1c1dc5f844

Short description of error
In certain corner cases it happened to me that I had to scale down grease pencil objects to 0 in a single axis.
It's a reliable way to align multiple objects and flatten a drawing across objects.

This way I noticed if I ever leave the scale at 0 on a even a single axis, it breaks all drawing and sculpting tools.
If any line is drawn in draw mode or any stroke is sculpted in sculpt mode, the affected lines snap to the origin point.

Exact steps for others to reproduce the error

  • Add a new grease pencil object
  • Scale the Y axis to 0
  • Draw some lines in draw mode
  • Sculpt some strokes in sculpt mode.
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-29 23:32, hash: `1c1dc5f844` **Short description of error** In certain corner cases it happened to me that I had to scale down grease pencil objects to 0 in a single axis. It's a reliable way to align multiple objects and flatten a drawing across objects. This way I noticed if I ever leave the scale at 0 on a even a single axis, it breaks all drawing and sculpting tools. If any line is drawn in draw mode or any stroke is sculpted in sculpt mode, the affected lines snap to the origin point. **Exact steps for others to reproduce the error** - Add a new grease pencil object - Scale the Y axis to 0 - Draw some lines in draw mode - Sculpt some strokes in sculpt mode.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Antonio Vazquez changed title from Grease Pencil: All strokes snap to origin in a Scale value is on 0 to GPencil: All strokes snap to origin in a Scale value is on 0 2022-10-01 11:48:23 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-10-01 11:51:07 +02:00

This issue was referenced by 8725bb5108

This issue was referenced by 8725bb5108ccab455c61a98f0da7d05dc0972660

This issue was referenced by 25533ac22d

This issue was referenced by 25533ac22d73086fb8841a7fc96018338fff44c5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101517
No description provided.